--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,60 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+.flex {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: row;
+    align-items: center;
+}
+
+.circle {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background: black;
+    margin-right: 20px;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.progressBar {
+    width: 300px;
+    height: 20px;
+    background: red;
+}
+
+.progress {
+    height: 100%;
+    background: blue;
+}
+
+.info {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.additionalBtns {
+    padding-top: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.buyBtn {
+    border: 1px solid black;
+    width: 150px;
+    height: 50px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.buyBtn p {
+    padding: 10px;
+}
