--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,7 @@ body:after {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    width: 100%;
 }
 
 .money {
@@ -104,12 +105,15 @@ body:after {
 .gameContainer {
     display: flex;
     flex-direction: row;
+    align-items: center;
+    justify-content: center;
     flex-wrap: wrap;
+    width: 100%;
+    background: rgba(0,0,0,0.5);
 }
 
 .task {
     padding: 40px 40px 40px 40px;
-    background: rgba(0,0,0,0.5);
 }
 
 
