changed background for mobile

--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,10 @@ body:after {
     position: absolute;
     z-index: -1;
     background-image: url("../assets/backgroundImage.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+
 }
 
 .flex {
